Blender 2.80 crash while dragging cursor and start scaling #57504

Closed
opened 2018-10-30 06:15:14 +01:00 by slawek · 5 comments

System Information
Windows 7, GTX 1070

Blender Version
Broken: 2.80 Alpha 2, c750ebe113

crash

Exact steps for others to reproduce the error
start Blender, left click somewhere on the canvas to change 3d cursor position, keep button pressed and start moving cursor, press "S" while moving cursor. Crashes every time. You have to keep moving cursor with LMB pressed (not just change position by clicking once) and while moving youre pressing "S".

**System Information** Windows 7, GTX 1070 **Blender Version** Broken: 2.80 Alpha 2, c750ebe113e **crash** **Exact steps for others to reproduce the error** start Blender, left click somewhere on the canvas to change 3d cursor position, keep button pressed and start moving cursor, press "S" while moving cursor. Crashes every time. You have to keep moving cursor with LMB pressed (not just change position by clicking once) and while moving youre pressing "S".
Author

Added subscriber: @nezumi

Added subscriber: @nezumi
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-10-30 12:09:47 +01:00
Member

Can confirm the crash.

1  ElementResize            transform.c       3711 0x1bc6f87 
2  applyResize              transform.c       3808 0x1bc7539 
3  transformApply           transform.c       2674 0x1bc40d1 
4  transform_modal          transform_ops.c   416  0x1c2654

td->ext->size` is NULL for the Cursor, so assigning crashes.

P811 is a bandaid, but proper fix would be much earlier I guess ( and is up to @ideasman42? mind having a look?)

Can confirm the crash. ``` 1 ElementResize transform.c 3711 0x1bc6f87 2 applyResize transform.c 3808 0x1bc7539 3 transformApply transform.c 2674 0x1bc40d1 4 transform_modal transform_ops.c 416 0x1c2654 ``` ` `td->ext->size` is NULL for the Cursor, so assigning crashes. [P811](https://archive.blender.org/developer/P811.txt) is a bandaid, but proper fix would be much earlier I guess ( and is up to @ideasman42? mind having a look?)
Philipp Oeser changed title from Blender 2.80 Alpha 2 crash to Blender 2.80 crash while dragging cursor and start scaling 2018-10-30 12:10:33 +01:00

This issue was referenced by 9c23e24543

This issue was referenced by 9c23e245432bb019dd47bfa0fcffd95638fd5ada

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57504
No description provided.