Fix T57504: Scaling 3D cursor crashes